blueprint/schema-registry/schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schema-registry
  name: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  strategy: {}
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - image: kapkiai/schema-registry:1.0.1
        name: schema-registry
        resources: 
          requests:
            cpu: "1"
            memory: "2Gi"
            ephemeral-storage: "2Gi"
          limits:
            cpu: "2"
            memory: "3Gi"
            ephemeral-storage: "3Gi"
        ports:
        - containerPort: 8445
          name: https-port
        - containerPort: 8446
          name: ssh
        volumeMounts:
          - mountPath: /opt/conf
            name: schema-config
            # subPath: registry.yaml
      volumes:
        - name: schema-config
          configMap:
            name: schema-config
            items:
              - key: registry-dev-ssl.yaml
                path: registry.yaml
