blueprint/schema-registry/schema-reg-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: schema-registry
  name: schema-registry-lb
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: schema-registry
  sessionAffinity: None
  type: LoadBalancer
