blueprint/schema-registry/schema-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: schemareg-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - schemareg'
    
  labels:
    name: schema-registry-ingress
  name: schema-registry-ingress
spec:
  rules:
  - host: schemareg.big-data.blueprint.lab
    http:
      paths:
      - backend:
          service:
            name: schema-registry
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
